--- a/src/components/background.css
+++ b/src/components/background.css
@@ -122,7 +122,7 @@
 .dealer-cards{
     width: 100%;
     height: 250px;
-    background-color: chartreuse;
+    /*background-color: chartreuse;*/
    
     margin-bottom: 0;
     margin-top: 20px;
@@ -133,7 +133,7 @@
     width: 100%;
     height: 300px;
    
-    background-color:darksalmon;
+    /*background-color:darksalmon;*/
 
 }
 
@@ -252,6 +252,6 @@
   }
 
 .contenedor-total{
-    background-color: #20125f;
+    /*background-color: #20125f;*/
     margin-top: -200px;
 }
